# copy-tool-net

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CopyToolNet.cpp  main.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientApplication.cpp  ClientApplication.h  ClientSession.cpp  ClientSession.h  FileClient.cpp  FileClient.h  FileHandler.cpp  FileHandler.h  FilePathPrompt.cpp  FilePathPrompt.h  FileReader.cpp  FileReader.h  MessageHandler.cpp  MessageHandler.h  MessageQueueHandler.cpp  MessageQueueHandler.h  MessageReader.cpp  MessageReader.h  MessageWriter.cpp  MessageWriter.h  MessagesPrompt.cpp  MessagesPrompt.h  MessagesQueueHandler.cpp  MessagesQueueHandler.h  Startup.cpp  Startup.h  TcpClient.cpp  TcpClient.h
src/common/: ApplicationBuilder.cpp  ApplicationBuilder.h  ApplicationType.h  CMakeLists.txt  CmdArgs.h  FileService.cpp  FileService.h  IApplication.h  Tcp.cpp  Tcp.h  TcpClient.cpp  TcpClient.h  TcpReader.cpp  TcpReader.h  TcpWriter.cpp  TcpWriter.h
src/common/encryption/: Aes.cpp  Aes.h  Constants.h  Rsa.cpp  Rsa.h
src/common/models/: FileHeaders.h  FileRequest.h  RequestMetadata.h
src/common/network/tcp/: Acceptor.cpp  Acceptor.h  Connector.cpp  Connector.h  Constants.h  Details.h  ISerializable.h  OperationException.h  OperationResult.h  Reader.h  Socket.cpp  Socket.h  Utils.h  Writer.h
src/common/services/: FileService.cpp  FileService.h  ThreadPool.cpp  ThreadPool.h
src/exceptions/: DisconnectException.h
src/infrastructure/: ApplicationBuilder.h  IApplication.h
src/models/: CmdArgs.h  Colors.h  Endpoints.h  FileHeaders.h  FileRequest.h  Message.h  RequestMetadata.h
src/server/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  FileHandler.cpp  FileHandler.h  FileWriter.cpp  FileWriter.h  MessageReader.cpp  MessageReader.h  Server.cpp  Server.h  ServerApplication.cpp  ServerApplication.h  ServerSession.cpp  ServerSession.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Startup.cpp  Startup.h
src/server/controllers/: FileController.cpp  FileController.h  IController.h
src/server/services/: FileHandler.cpp  FileHandler.h  FileService.cpp  FileService.h  FileStorage.cpp  FileStorage.h  StorageProvider.cpp  StorageProvider.h  WorkersPool.cpp  WorkersPool.h
src/utils/: ApplicationBuilder.cpp  ApplicationBuilder.h  CmdArgs.h  CmdArgsParser.cpp  CmdArgsParser.h  Colors.h  DateTimeProvider.h  Logger.h
